--- a/main/assets/css/video.css
+++ b/main/assets/css/video.css
@@ -70,12 +70,12 @@ video, canvas {
     transform: rotateY(180deg);
     -webkit-transform:rotateY(180deg); /* Safari and Chrome */
     -moz-transform:rotateY(180deg); /* Firefox */
+    /*round corners*/
     -webkit-mask-image: -webkit-radial-gradient(circle, white 100%, black 100%); 
--webkit-transform: rotate(0.000001deg); 
--webkit-border-radius: 10px; 
--moz-border-radius: 10px;
-border-radius: 10px; 
-overflow: hidden;
+    -webkit-border-radius: 10px; 
+    -moz-border-radius: 10px;
+    border-radius: 10px; 
+    overflow: hidden;
     border-color: white;
     border-width: 2px;
 }
